# simple_navigator

./: .gitignore  README.md  TEST_MODERN_EDITOR.md  package.xml  pyproject.toml  setup.cfg  setup.py
config/: target.yaml  target_diag.yaml  target_origin.yaml  target_spin.yaml  waypoints.yaml
launch/: modern_editor.launch.py  navigator.launch.py  test_integration.launch.py
screenshots/: README.md
simple_navigator/: __init__.py  config_loader.py  controller.py  math_utils.py  mock_robot.py  modern_waypoint_editor.py  navigator_node.py  simple_controller.py  trajectory.py  waypoint_editor.py  waypoint_manager.py
test/: test_integration_navigator.py  test_navigator.py
